add openai redirect
