# routes/api.js
@@ -1,7 +1,16 @@
 import express from 'express'
 
 import dotenv from 'dotenv'
-import { login, callback, refreshToken, searchTracks, createPlaylist, addTracks } from '../controllers/apiController.js'
+import {
+  login,
+  loginOpenAI,
+  tokenOpenAI,
+  callback,
+  refreshToken,
+  searchTracks,
+  createPlaylist,
+  addTracks,
+} from '../controllers/apiController.js'
 
 dotenv.config()
 
@@ -18,5 +27,9 @@ router.post('/search-tracks', searchTracks)
 router.post('/create-playlist', createPlaylist)
 
 router.post('/add-tracks', addTracks)
+
+router.post('/token-openai', tokenOpenAI)
+
+router.post('/login-openai', loginOpenAI)
 
 export default router
